Added viewport and title for button 'page-up'

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Todo apps</title>
 	<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
@@ -18,7 +19,7 @@
 					<li class="open-search button fa fa-search" title="Search"></li>
 					<li class="hide-show button fa fa-eye" title="Hide|Show done notes"></li>
 					<li class="delete-done button fa fa-trash" title="Delete done notes"></li>
-					<li class="page-up button fa fa-arrow-up not-available"></li>
+					<li class="page-up button fa fa-arrow-up not-available" title="Page up"></li>
 				</ul>
 			</form>
 		</header>
