--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>To do app</title>
-	<!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> -->
+	<title>To do app</title>>
 	<link rel="stylesheet" href="dist/style.css">
 </head>
 <body>
@@ -42,8 +41,6 @@
 		</li>
 	</script>
 	<!-- Скрипты -->
-	<!-- <script src="node_modules/jquery/dist/jquery.js"></script> -->
-	<!-- <script src='node_modules/lodash/lodash.js'></script> -->
 	<script src="dist/script.js"></script>
 </body>
 </html>
